force-app/main/default/objects/Subscription_Line__c/Subscription_Line__c.object-meta.xml
<CustomObject>
    <label>Subscription Line</label>
    <nameField>
        <label>Line Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Subscription Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>