force-app/main/default/objects/Subscription_Line__c/fields/Cost_Base__c.field-meta.xml
<CustomField>
  <fullName>Cost_Base__c</fullName>
  <label>Unit Cost (Base)</label>
  <type>Currency</type>
  <precision>14</precision>
  <scale>2</scale>
</CustomField>