force-app/main/default/objects/Subscription_Line__c/fields/Line_Gross_Profit__c.field-meta.xml
<CustomField>
  <fullName>Line_Gross_Profit__c</fullName>
  <label>Line Gross Profit</label>
  <type>Currency</type>
  <precision>16</precision>
  <scale>2</scale>
  <formulaTreatBlankAs>BlankAsZero</formulaTreatBlankAs>
  <formula>Total_Price__c - Total_Cost__c</formula>
</CustomField>