force-app/main/default/objects/Subscription_Line__c/fields/Line_Item_Description__c.field-meta.xml
<CustomField>
  <fullName>Line_Item_Description__c</fullName>
  <label>Line Item Description</label>
  <type>Text</type>
  <length>255</length>
</CustomField>