force-app/main/default/objects/Subscription_Line__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Subscription Lines</relationshipLabel>
    <relationshipName>Product_Subscription_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>