force-app/main/default/objects/Subscription_Line__c/fields/Subtotal__c.field-meta.xml
<CustomField>
  <fullName>Subtotal__c</fullName>
  <label>Subtotal</label>
  <type>Currency</type>
  <precision>16</precision>
  <scale>2</scale>
  <formula>ROUND( ROUND(Unit_Price__c, 2) * Quantity__c, 2 )</formula>
</CustomField>