force-app/main/default/objects/Subscription_Line__c/fields/Total_Price__c.field-meta.xml
<CustomField>
  <fullName>Total_Price__c</fullName>
  <label>Total Price</label>
  <type>Currency</type>
  <precision>16</precision>
  <scale>2</scale>
  <formula>ROUND( ROUND(Unit_Net__c, 2) * Quantity__c, 2 )</formula>
</CustomField>