force-app/main/default/objects/Subscription_Line__c/fields/Unit_Base__c.field-meta.xml
<CustomField>
  <fullName>Unit_Base__c</fullName>
  <label>Unit Base</label>
  <type>Currency</type>
  <precision>16</precision>
  <scale>4</scale>
</CustomField>