force-app/main/default/objects/Subscription_Line__c/fields/Unit_Price__c.field-meta.xml
<CustomField>
  <fullName>Unit_Price__c</fullName>
  <label>Unit Price</label>
  <type>Currency</type>
  <precision>14</precision>
  <scale>2</scale>
</CustomField>